--- a/style.css
+++ b/style.css
@@ -46,3 +46,10 @@ p {
     font-style: normal;
     text-align: justify;
 }
+
+@media only screen and (max-width: 900px) {
+    p {
+        margin-left: 5vh;
+        margin-right: 5vh;
+    }
+}
