--- a/style.css
+++ b/style.css
@@ -37,9 +37,8 @@ a {
 
 p {
     color: white;
-    margin-top: 2em;
-    margin-left: 30vh;
-    margin-right: 30vh;
+    max-width: 50em;
+    margin: 2em auto 0;
     font-family: "SUSE", sans-serif;
     font-optical-sizing: auto;
     font-weight: 500;
